# PaperTracker

./: index.html  package-lock.json  package.json  tsconfig.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: eye_config.toml  face_config.toml  version.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/algorithm/: mod.rs  onnxrt_inference.rs
src-tauri/src/config/: config.rs
src-tauri/src/integration/: image_ui_updater.rs  init.rs  interface.rs  mod.rs  reconnect_manager.rs  serial_commands.rs  serial_messages.rs  video_commands.rs
src-tauri/src/paper_tracker_config/: config.rs  mod.rs
src-tauri/src/serial/: client.rs  esp32.rs  esp32_control.rs  esp32_serial.rs  esptools.rs  global.rs  messages.rs  mod.rs  serial_msg.rs  worker.rs
src-tauri/src/updater/: mod.rs  version_check.rs
src-tauri/src/utils/: consts.rs  mod.rs  platform.rs  roi.rs
src-tauri/src/websocket/: client.rs  esp32_video_stream.rs  global.rs  image_downloader.rs  image_msg.rs  image_stream.rs  manager.rs  messages.rs  mod.rs  worker.rs
src/assets/: style.css
src/components/: AppLayout.vue  DraggableSlider.vue  EyeTrackerWindow.vue  FaceTrackerWindow.vue  MainWindow.vue
src/components/pop_window/: ConfirmBox.vue  FirmwareSelector.vue  MessageBox.vue  Modal.vue  ProgressBox.vue
src/functional/: createStreams.ts  deviceService.ts  message.ts  types.ts
src/functional/pop_window/: confirmService.ts  messageService.ts
