[package]
name = "papertracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "papertracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
opencv = { version = "0.94.4", default-features = false, features = ["imgcodecs", "imgproc", "highgui"] }
config = "0.11"
once_cell = "1.5.2"
anyhow = "1.0.51"
toml = "0.8"
tungstenite = "0.21.0"
url = "2.4.0"
threadpool = "1.8"
chrono = "0.4"
mdns-sd = "0.7.0"
thiserror = "2.0.12"
